home page finished, add listing started

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
     --gray-bg: rgba(245, 245, 245, 1);
     --font-montserrat: 'Montserrat', "Montserrat Fallback";
     --font-poppins: 'Poppins', "Poppins Fallback";
-
+    --orange: rgb(255, 142, 0);
   }
   .dark {
     --background: 0 0% 3.9%;
